17/9/2014 0.9.16   Shai Shasag <shai@waves.com>

    programmer visible changes:
    * ran "inspect code..." fixed a (few) issues.
    * more refined yaml reading options: url with/without sig and checksum. with multuple copy destinations.
    * removed redundant functions get_machine_config_file_path, get_user_config_file_path
    * Split new function read_from_file_or_url from download_from_file_or_url
    * new initial vars: "__SITE_DATA_DIR__": appdirs.site_data_dir(),
                        "__SITE_CONFIG_DIR__": appdirs.site_config_dir(),
                        "__USER_DATA_DIR__": appdirs.user_data_dir(),
                         "__USER_CONFIG_DIR__": appdirs.user_config_dir()

17/9/2014 0.9.15   Shai Shasag <shai@waves.com>

    user visible changes, client:
    * remove command fully implemented.
    * Fixed handling of pre_copy_item when no items to copy to folder.
    * Added __TARGET_DIR__ var on remove folder loop - still need to add in other loops
    * Fixed Windows recursive rmdir in PlatformSpecificHelperWin
    * Overhaul of all actions names. New names are:
        'pre_copy', 'pre_copy_to_folder', 'pre_copy_item',
        'post_copy_item', 'post_copy_to_folder', 'post_copy',
        'pre_remove', 'pre_remove_from_folder', 'pre_remove_item',
        'remove_item', 'post_remove_item', 'post_remove_from_folder', 'post_remove'
    * target folders in remove sorted in reverse
    * New command remove-empty-folders: removes empty folders or folders containing only ignired files.
        List of ignored files are specified in REMOVE_EMPTY_FOLDERS_IGNORE_FILES variable.

    user visible changes, admin:

    programmer visible changes:
    * Removed redundant imports using snakefood
    * Removed redundant file do_something.py
    * improved handling of Null values in resolve_to_list
    * New defaults file InstlMisc.yaml with definition of REMOVE_EMPTY_FOLDERS_IGNORE_FILES

 24/6/2014 0.9.14   Shai Shasag <shai@waves.com>
