@@ -4,7 +4,7 @@ __INSTL_VERSION__:
     - 0
     - 9
     - 16
-    - 1
+    - 2
 
 --- !define
 
